# qe-compiler

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.py  qec-activate.in
.github/workflows/: lint.yml  test.yml
cmake/: AddQEC.cmake  apple-clang.cmake  llvm-clang.cmake
docs/: variable-lowering.rst
include/: Config.h.in  QEC.h
include/API/: api.h  errors.h
include/Arguments/: Arguments.h  Signature.h
include/Config/: CLIConfig.h  EnvVarConfig.h  QEConfig.h
include/Dialect/: RegisterDialects.h  RegisterPasses.h
include/Dialect/Pulse/Transforms/: Passes.h  SchedulePort.h
include/Frontend/OpenQASM3/: BaseQASM3Visitor.h  OpenQASM3Frontend.h  PrintQASM3Visitor.h  QUIRGenQASM3Visitor.h  QUIRVariableBuilder.h
include/HAL/: PassRegistration.h  SystemConfiguration.h  TargetOperationPass.h  TargetSystem.h  TargetSystemInfo.h  TargetSystemRegistry.h
include/HAL/Compile/: TargetCompilationManager.h  ThreadedCompilationManager.h
include/Payload/: PatchableZipPayload.h  Payload.h  PayloadRegistry.h
include/Plugin/: PluginInfo.h  PluginRegistry.h
include/Support/: Pimpl.h
include/Utils/: DebugIndent.h  LegacyInputConversion.h  OperationUtils.h
lib/: CMakeLists.txt  QEC.cpp
lib/API/: CMakeLists.txt  api.cpp  errors.cpp
lib/Arguments/: Arguments.cpp  CMakeLists.txt  Signature.cpp
lib/Config/: CLIConfig.cpp  CMakeLists.txt  EnvVarConfig.cpp  QEConfig.cpp
lib/Dialect/Pulse/IR/: CMakeLists.txt
lib/Dialect/Pulse/Transforms/: CMakeLists.txt  Passes.cpp  SchedulePort.cpp
lib/Frontend/OpenQASM3/: BaseQASM3Visitor.cpp  CMakeLists.txt  OpenQASM3Frontend.cpp  PrintQASM3Visitor.cpp  QUIRGenQASM3Visitor.cpp  QUIRVariableBuilder.cpp
lib/HAL/: CMakeLists.txt  PassRegistration.cpp  SystemConfiguration.cpp  TargetSystem.cpp  TargetSystemInfo.cpp  TargetSystemRegistry.cpp  Targets.inc.in
lib/HAL/Compile/: CMakeLists.txt  TargetCompilationManager.cpp  ThreadedCompilationManager.cpp
lib/Payload/: CMakeLists.txt  Payload.cpp  Payloads.inc.in
lib/Payload/ZipPayload/: CMakeLists.txt  PatchableZipPayload.cpp  Payload.inc  ZipPayload.cpp  ZipPayload.h  ZipUtil.cpp  ZipUtil.h
lib/Utils/: CMakeLists.txt  DebugIndent.cpp  LegacyInputConversion.cpp
python_lib/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml.in  setup.cfg
python_lib/qe_compiler/: CMakeLists.txt  __init__.py  compile.py  exceptions.py  lib.cpp  lib_enums.cpp  link.py
python_lib/qss_compiler/: lib.cpp
targets/systems/mock/: CMakeLists.txt  MockTarget.cpp  MockTarget.h  MockUtils.cpp  MockUtils.h  Target.inc
targets/systems/mock/Transforms/: QubitLocalization.cpp  QubitLocalization.h
targets/systems/mock/test/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Config/: test-config.tst
test/Conversion/QUIRToPulse/: convert-quir-to-pulse.mlir
test/Dialect/OQ3/IR/: fold-cbit-extractbit.mlir  math.mlir  ops.mlir
test/Dialect/OQ3/Transforms/: limit-cbit-width.mlir
test/Dialect/Pulse/IR/: ops-error-testing.mlir  ops.mlir
test/Dialect/Pulse/Transforms/: classical-only-detection.mlir  merge-delay.mlir  pulse-inline.mlir  pulse-prune.mlir  pulse-slice.mlir  remove-unused-arguments.mlir  schedule-port-acquire.mlir  schedule-port-drive.mlir
test/Dialect/QUIR/IR/: angle-cmp-ops.mlir  canonicalization.mlir  control-flow.mlir  declarations.mlir  error-testing.mlir  gate-tests.mlir  invalid.mlir  ops-error-testing.mlir  ops.mlir  qubit-op-interface.mlir  test.mlir  verify-circuit.mlir
test/Dialect/QUIR/Transforms/: add-shot-loop.mlir  arg-specialization0.mlir  (+33 more)
test/Frontend/OpenQASM3/: angles.qasm  assign.qasm  barrier.qasm  bell-v0.qasm  bell-v1.qasm  bit-int-compare.qasm  bitindices.qasm  bitops-reg.qasm  bitops.qasm  bitops2.qasm  bitstring-init.qasm  bool_conditional_assign.qasm  booleans.qasm  builtin-constants.qasm  cast-op.qasm  cbit.qasm  classical-subroutines.qasm  compare-bits.qasm  compare-bool.qasm  complex.qasm  conditionals.qasm  delay-inside-controlflow.qasm  delay.qasm  extern.qasm  floats.qasm  for-loop.qasm  for-loop2.qasm  for-loop3.qasm  gate.qasm  gates-issue-655-2.qasm  gates-issue-655.qasm  handle-ints.qasm  input-output-variables.qasm  input-parameters-errors.qasm  input-parameters-if.qasm  input-parameters-while.qasm  input-parameters.qasm  ints.qasm  ipe-v0.qasm  ipe-v1.qasm  (+26 more)
test/IO/: bytecode.mlir  none.mlir
test/python_lib/: test_compile.py  test_link.py
test/unittest/: CMakeLists.txt
test/unittest/HAL/: TargetSystemRegistryTest.cpp
test/unittest/Payload/: PayloadRegistryTest.cpp
tools/: CMakeLists.txt
tools/qe-compiler/: CMakeLists.txt  qe-compiler.cpp
tools/qe-opt/: CMakeLists.txt  qe-opt.cpp
(+22 files in other folders)
